# dotfiles

./: .bash_profile  .bashrc  .vimrc  CMakeLists.txt  Doxyfile  README.md  settings.json
